--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "kaze-ui",
+  "private": true,
   "version": "0.0.1",
   "description": "component library with kaze-style",
-  "private": true,
+  "author": "",
+  "license": "MIT",
   "workspaces": [
     "packages/*",
     "playground/*"
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev:next": "yarn workspace @kaze-ui/playground-next dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "next": "yarn workspace @kaze-ui/playground-next "
   },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "arg": "^5.0.2",
+    "esbuild": "^0.17.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.1",
+    "rimraf": "^4.0.4",
+    "tsx": "^3.12.2",
     "turbo": "^1.6.3",
     "typescript": "^4.9.4"
   }
