--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,10 @@
     "module": "esnext",
     "moduleResolution": "node",
     "allowJs": true,
-    "noEmit": true,
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true
+    "jsx": "react"
   },
   "exclude": ["**/node_modules", "**/dist*", "**/*.*js"]
 }
